# Moodle-DL

./: #main.py#  .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  ideas.md  main.py  moodle-dl  moodle_documentation.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  docker-publish.yml  flake8.yml  isort.yml  python-publish.yml  ruff.yml  translations.yml
config_service/: config_helper.py  config_service.py
download_service/: downlaoder.py  download_service.py  downloader.py  fake_download_service.py  path_tools.py  url_target.py
moodle_connector/: assignments_handler.py  databases_handler.py  first_contact_handler.py  login_helper.py  moodle_service.py  request_helper.py  results_handler.py  sso_token_receiver.py
moodle_dl/: config.py  database.py  main.py  types.py  utils.py  version.py
moodle_dl/cli/: __init__.py  config_wizard.py  database_manager.py  moodle_wizard.py  notifications_wizard.py
moodle_dl/config/: __init__.py  config_helper.py  config_service.py
moodle_dl/config_service/: __init__.py  config_helper.py  config_service.py
moodle_dl/database/: offline_service.py  state_recorder.py
moodle_dl/download_service/: download_service.py  downloader.py  fake_download_service.py  path_tools.py  task.py  url_target.py
moodle_dl/downloader/: download_service.py  fake_download_service.py  task.py
moodle_dl/git_service/: git_service.py
moodle_dl/gui/: app.py  main_window.py  workers.py
moodle_dl/moodle/: cookie_handler.py  core_handler.py  moodle_constants.py  moodle_service.py  request_helper.py  result_builder.py
moodle_dl/moodle_connector/: __init__.py  assignments_handler.py  cookie_handler.py  core_handler.py  databases_handler.py  first_contact_handler.py  folders_handler.py  forums_handler.py  lessons_handler.py  login_helper.py  moodle_service.py  pages_handler.py  quizzes_handler.py  request_helper.py  result_builder.py  results_handler.py  ssl_helper.py  sso_token_receiver.py  workshops_handler.py
moodle_dl/notification_services/: __init__.py  notification_service.py
moodle_dl/notifications/: __init__.py  notification_service.py
moodle_dl/state_recorder/: __init__.py  course.py  file.py  offline_service.py  state_recorder.py
moodle_dl/utils/: cutie.py  logger.py  process_lock.py
moodle_dl/ydl_extractors/: __init__.py  extractors.py  googledrive.py  helixmedia.py  helixmedia_lti.py  (+6 more)
notification_services/: notification_service.py
scripts/: check_translations.py  compile_translations.py  update_translations.py
state_recorder/: course.py  file.py  offline_service.py  state_recorder.py
utils/: collection_of_Changes.py  config_helper.py  cutie.py  logger.py  process_lock.py  state_recorder.py  string_tools.py  tomd.py
(+94 files in other folders)
